# MaLeno

./: pyproject.toml  yes  yes.pub
app/: __init__.py  gemini_chat.py  main.py
app/static/css/: chat.css  styles.css
app/static/js/: chat.js  config.example.js  nav.js
app/templates/: blog.html  index.html
