[project]
name = "ml-dl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.32.0",
    "flask>=3.1.3",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
]
